--- a/Home.html
+++ b/Home.html
@@ -9,47 +9,55 @@
     <meta name="keywords" content="Games, Jogos, Video Games, Tablet, Computadores, Celulares" />
     <meta name="description"
         content="Bem vindo a Games Mania, aqui você encontrará tudo sobre o universo gamer, Jogos e muito mais!" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="home.css">
     <title>Games Mania</title>
-</head>
-<body>
-    <header class="Cabeçalho">
-        <nav class="Menu">
-            <div style="height: 160px; overflow: hidden">
-                <img src="Img\game-gc77e43cd8_640.png" alt="" width="8%">
+    <header>
+        <div class="logo">
+            <img src="Img\game-gc77e43cd8_640.png" alt="" width="8%">
+        </div>
+        <nav>
+            <div class="nomeLoja">
                 <p>
                     <b>Games Mania</b>
                 </p>
+            </nav>
+            <div id="login">
+                <a href="telaDeLogin.html">Login</a>
             </div>
-            <a href="Home.html">Tela Principal</a>
-            <a href="Empresa.html">Empresa</a>
-            <a href="produtos.html">Tela de Produtos</a>
-            <a href="telaContato.html">Tela de Contato</a>
+            <div id="menu">
+                <a href="home.html">Tela Principal</a>
+                <a href="empresa.html">Empresa</a>
+                <a href="produtos.html">Tela de Produtos</a>
+                <a href="telaContato.html">Tela de Contato</a>
+            </div>
         </nav>
-        <a href="TelaDeLogin.html">Login</a>
     </header>
+</head>
+
+<body>
     <h1>Bem Vindo a Nossa Loja, Games Mania</h1>
     <h2>Produtos em Destaque:</h2>
     <div style="padding: 15px; border: none; outline: none; font-size: 15px;" class="search-box">
         <input class="search-txt" type="text" name="" placeholder="Faça sua pesquisa">
         <a class="search-btn" href="#"></a>
     </div>
-    <div style="height: 300px; overflow: hidden">
+    <div style="height: 400px; overflow: hidden">
         <img src="Img\x-box-1791671 (1).jpg" alt="Código html" width="25%">
+
         <p>
             <b>Xbox Series X Promoção 2,500R$</b>
         </p>
 
-    </div>   
-    <div style="height: 300px; overflow: hidden;">
-            <img src="Img\nintendo-switch-2154437_1920.jpg" alt="" width="25%">
+    </div>
+    <div style="height: 400px; overflow: hidden;">
+        <img src="Img\nintendo-switch-2154437_1920.jpg" alt="" width="25%">
         <p>
             <b>Nintendo Switch Promoção 2,000R$</b>
         </p>
-        
+
     </div>
 
-    <div style="height: 275px; overflow:hidden">
+    <div style="height: 400px; overflow:hidden">
         <img src="Img\game-console-g770f550e6_640.jpg" alt="" width="25%">
         <p>
             <b>Controle PS4 Original Promoção 150R$</b>
@@ -58,13 +66,13 @@
     </div>
 
     <footer class="Rodapé">
-        <div style="height: 110px; overflow:hidden">
-            <img src="Img\game-gc77e43cd8_640.png" alt="" width="8%">
+        <div style="height: 150px; overflow:hidden">
+            <img id="" src="Img\game-gc77e43cd8_640.png" alt="" width="8%">
         </div>
         <div style="float: right">
             <p>Quarta-Feira de 2022</p>
         </div>
-        <ol style="color: black;">
+        <ol>
             <li>E-mail</li>
             <li>Telefone</li>
             <li>Localização</li>
