--- a/produtos.html
+++ b/produtos.html
@@ -11,24 +11,31 @@
         content="Bem vindo a Games Mania, aqui você encontrará tudo sobre o universo gamer, Jogos e muito mais!" />
     <link rel="stylesheet" href="style.css">
     <title>Games Mania</title>
-</head>
-
-<body>
     <header>
+        <div class="logo">
+            <img src="Img\game-gc77e43cd8_640.png" alt="" width="8%">
+        </div>
         <nav>
-            <div style="height: 160px; overflow: hidden">
-                <img src="Img\game-gc77e43cd8_640.png" alt="" width="8%">
+            <div class="nomeLoja">
                 <p>
                     <b>Games Mania</b>
                 </p>
+            </nav>
+            <div id="login">
+                <a href="telaDeLogin.html">Login</a>
             </div>
-            <a href="Home.html">Tela Principal</a>
-            <a href="Empresa.html">Empresa</a>
-            <a href="produtos.html">Tela de Produtos</a>
-            <a href="telaContato.html">Tela de Contato</a>
+            <div id="menu">
+                <a href="home.html">Tela Principal</a>
+                <a href="empresa.html">Empresa</a>
+                <a href="produtos.html">Tela de Produtos</a>
+                <a href="telaContato.html">Tela de Contato</a>
+            </div>
         </nav>
-        <a href="TelaDeLogin.html">Login/Cadastre-se</a>
     </header>
+</head>
+
+<body>
+    
     <h1>Produtos</h1>
     <div class="search-box">
         <input class="search-txt" type="text" name="" placeholder="Faça sua pesquisa">
