--- a/TelaDeLogin.html
+++ b/TelaDeLogin.html
@@ -9,54 +9,15 @@
     <meta name="keywords" content="Games, Jogos, Video Games, Tablet, Computadores, Celulares" />
     <meta name="description"
         content="Bem vindo a Games Mania, aqui você encontrará tudo sobre o universo gamer, Jogos e muito mais!" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="telaDeLogin.css">
     <title>Tela de Login</title>
-    <style>
-        body{
-            font-family: Arial, Helvetica, sans-serif;
-            background-image: linear-gradient(95deg, blue, black);
-        }
-
-        div{
-            background-color: rgba(0, 0, 0, 0.8);
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            padding: 80px;
-            border-radius: 15px;
-            color: #fff;
-        }
-        
-        input{
-            padding: 15px;
-            border: none;
-            outline: none;
-            font-size: 15px;
-        }
-
-        button{
-            background-color: dodgerblue;
-            border: none;
-            padding: 15px;
-            width: 100%;
-            border-radius: 10px;
-            color: white;
-            font-size: 15px;
-            cursor: pointer;
-        }
-
-        button:hover{
-            background-color: deepskyblue;
-        }
-    </style>
-</head>
-<body>
     <header>
         <nav>
             <a href="Home.html"></a>
         </nav>
     </header>
+</head>
+<body>
     <div class="Tela-Login">
         <h1>Login</h1>
         <input type="text" placeholder="Nome">
