--- a/home.html
+++ b/home.html
@@ -8,19 +8,23 @@
     <meta name="author" content="Matheus Augusto" />
     <meta name="keywords" content="Games, Jogos, Video Games, Tablet, Computadores, Celulares" />
     <meta name="description"
-        content="Bem vindo a Games Mania, aqui você encontrará tudo sobre o universo gamer, Jogos e muito mais!" />
+    content="Bem vindo a Games Mania, aqui você encontrará tudo sobre o universo gamer, Jogos e muito mais!" />
+    <link rel="stylesheet" type="txt/css" href="Bootstrap/bootstrap.css">
+    <script type="text/javascript" src="Bootstrap/bootstrap.bundle.js"> </script>
     <link rel="stylesheet" href="home.css">
+
     <title>Games Mania</title>
+
+</head>
+
+<body>
+
     <header>
-        <div class="logo">
-            <img src="Img\game-gc77e43cd8_640.png" alt="" width="8%">
-        </div>
+            <img src="Img\Logo.png" alt="logo-Marca" width="8%">
         <nav>
             <div class="nomeLoja">
-                <p>
-                    <b>Games Mania</b>
-                </p>
-            </nav>
+                <h1>Games Mania</h1>
+            </div>    
             <div id="login">
                 <a href="telaDeLogin.html">Login</a>
             </div>
@@ -31,10 +35,9 @@
                 <a href="telaContato.html">Tela de Contato</a>
             </div>
         </nav>
-    </header>
-</head>
 
-<body>
+    </header>
+
     <h1>Bem Vindo a Nossa Loja, Games Mania</h1>
     <h2>Produtos em Destaque:</h2>
     <div style="padding: 15px; border: none; outline: none; font-size: 15px;" class="search-box">
@@ -67,10 +70,10 @@
 
     <footer class="Rodapé">
         <div style="height: 150px; overflow:hidden">
-            <img id="" src="Img\game-gc77e43cd8_640.png" alt="" width="8%">
+            <img id="" src="Img\Logo.png" alt="" width="8%">
         </div>
         <div style="float: right">
-            <p>Quarta-Feira de 2022</p>
+            <h6>Quarta-feira, 2022</h6>
         </div>
         <ol>
             <li>E-mail</li>
@@ -80,4 +83,5 @@
     </footer>
 </body>
 
+<script type="text/javascript" src="Bootstrap/bootstrap-5.0.2-dist/js/bootstrap.min.js"> </script>
 </html>
