--- a/produtos.html
+++ b/produtos.html
@@ -9,11 +9,12 @@
     <meta name="keywords" content="Games, Jogos, Video Games, Tablet, Computadores, Celulares" />
     <meta name="description"
         content="Bem vindo a Games Mania, aqui você encontrará tudo sobre o universo gamer, Jogos e muito mais!" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" type="txt/css" href="Bootstrap/bootstrap-5.0.2-dist/css/bootstrap-grid.min.css">
+    <link rel="stylesheet" href="produtos.css">
     <title>Games Mania</title>
     <header>
         <div class="logo">
-            <img src="Img\game-gc77e43cd8_640.png" alt="" width="8%">
+            <img src="Img\Logo.png" alt="" width="8%">
         </div>
         <nav>
             <div class="nomeLoja">
@@ -55,7 +56,7 @@
     </div>
     <footer>
         <div style="height: 110px; overflow:hidden">
-            <img src="Img\game-gc77e43cd8_640.png" alt="" width="8%">
+            <img src="Img\Logo.png" alt="" width="8%">
         </div>
         <div style="float: right">
             <p>Quarta-Feira de 2022</p>
@@ -67,4 +68,7 @@
         </ol>
     </footer>
 </body>
+
+<script type="text/javascript" src="Bootstrap/bootstrap-5.0.2-dist/js/bootstrap.min.js"> </script>
+
 </html>    
