--- a/telaDeLogin.html
+++ b/telaDeLogin.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
-<head>
+<>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,25 +10,19 @@
     <meta name="description"
         content="Bem vindo a Games Mania, aqui você encontrará tudo sobre o universo gamer, Jogos e muito mais!" />
     <link rel="stylesheet" href="telaDeLogin.css">
+    <link rel="stylesheet" href="bootstrap/bootstrap.css">
+    <script src="javascript.js/tela_login.js"></script>
     <title>Tela de Login</title>
-    <header>
-        <nav>
-            <a href="Home.html"></a>
-        </nav>
-    </header>
-</head>
-<body>
-    <div class="Tela-Login">
-        <h1>Login</h1>
-        <input type="text" placeholder="Nome" id="nome">
-        <br><br>
-        <input type="Password" placeholder="Senha" id="senha">
-        <br><br>
-        <button onclick="logar()" return false >Enviar</button>
-    </div>
-</body>
 
-<script src="javascript.js/tela_login.js"></script>
-<script type="text/javascript" src="Bootstrap/bootstrap-5.0.2-dist/js/bootstrap.min.js"> </script>
+    <body>
+        <div class="Tela-Login">
+            <h1>Login</h1>
+            <input type="text" placeholder="Nome" id="nome">
+            <br><br>
+            <input type="Password" placeholder="Senha" id="senha">
+            <br><br>
+            <button onclick="logar()" return false>Enviar</button>
+        </div>
+    </body>
 
 </html>
