--- a/empresa.html
+++ b/empresa.html
@@ -9,46 +9,71 @@
     <meta name="keywords" content="Games, Jogos, Video Games, Tablet, Computadores, Celulares" />
     <meta name="description"
         content="Bem vindo a Games Mania, aqui você encontrará tudo sobre o universo gamer, Jogos e muito mais!" />
-        <link rel="stylesheet" type="txt/css" href="Bootstrap/bootstrap-5.0.2-dist/css/bootstrap-grid.min.css">
-        <link rel="stylesheet" href="empresa.css">
+    <link rel="stylesheet" type="txt/css" href="Bootstrap/bootstrap.css">
+    <link rel="stylesheet" href="empresa.css">
+    <script src="bootstrap/bootstrap.bundle.js"></script>
     <title>Games Mania</title>
-    <header>
-        <div class="logo">
-            <img src="Img\Logo.png" alt="logo-Marca" width="8%">
-        </div>
-        <nav>
-            <div class="nomeLoja">
-                <p>
-                    <b>Games Mania</b>
-                </p>
-            </nav>
-            <div id="login">
-                <a href="telaDeLogin.html">Login</a>
-            </div>
-            <div id="menu">
-                <a href="home.html">Tela Principal</a>
-                <a href="empresa.html">Empresa</a>
-                <a href="produtos.html">Tela de Produtos</a>
-                <a href="telaContato.html">Tela de Contato</a>
-            </div>
-        </nav>
-    </header>
+
 </head>
+
 <body>
 
-    <h1>Saiba Mais Sobre a Nossa empresa e Nossos objetivos</h1>
-    <div class="search-box">
-        <input class="search-txt" type="text" name="" placeholder="Faça sua pesquisa">
-        <a class="search-btn" href="#"></a>
-    </div>
-    <div style="height: 410px">
-        <img src="Img\pixel-art-g08c9bb3f0_640.png" alt="" width="30%">
-    </div>
-    <p>A nossa missão é inspirar e valorizar a paixão pela tecnologia, jogos, conteúdos,
-    entretenimento e inovação, causando uma emoção inédita, criando experiências
-    e prazeres. A visão da empresa é de ampliar o público-alvo e as nossas ações no
-    mundo gamer e tecnológico. Já os valores envolvem, ética, inovação, respeito aos
-    clientes, respeito à lei.</p>
+    <header>
+        <div class="logo-marca">
+            <img src="img/Logo.png" alt="Logo Marca">
+        </div>
+    </header>
+
+    <nav class="navbar navbar-expand-lg bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="index.html">Tela Principal</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="produtos.html">Tela de Produtos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="telaContato.html">Tela de Contato</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            Outros
+                        </a>
+                        <ul class="dropdown-menu roxo">
+                            <li><a class="dropdown-item" href="telaDeLogin.html">Login</a></li>
+                            <li><a class="dropdown-item" href="empresa.html">Sobre a Empresa</a></li>
+                        </ul>
+                    </li>
+                </ul>
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+            </div>
+        </div>
+    </nav>
+
+    <main>
+        <h1>Saiba Mais Sobre a Nossa empresa e Nossos objetivos</h1>
+        <div class="search-box">
+            <input class="search-txt" type="text" name="" placeholder="Faça sua pesquisa">
+            <a class="search-btn" href="#"></a>
+        </div>
+        <div style="height: 410px">
+            <img src="Img\pixel-art-g08c9bb3f0_640.png" alt="" width="30%">
+        </div>
+        <p>A nossa missão é inspirar e valorizar a paixão pela tecnologia, jogos, conteúdos,
+            entretenimento e inovação, causando uma emoção inédita, criando experiências
+            e prazeres. A visão da empresa é de ampliar o público-alvo e as nossas ações no
+            mundo gamer e tecnológico. Já os valores envolvem, ética, inovação, respeito aos
+            clientes, respeito à lei.</p>
+    </main>
     <footer style="border: 300px;">
         <div style="height: 110px; overflow:hidden">
             <img src="Img\Logo.png" alt="" width="8%">
