--- a/atividade2 Boostratp/bootstrap.html
+++ b/atividade2 Boostratp/bootstrap.html
@@ -9,9 +9,10 @@
     <meta name="keywords" content="Games, Jogos, Video Games, Tablet, Computadores, Celulares" />
     <meta name="description"
         content="Bem vindo a Games Mania, aqui você encontrará tudo sobre o universo gamer, Jogos e muito mais!" />
-    <link rel="stylesheet" href="bootstrap/bootstrap.css">
-    <link rel="stylesheet" href="bootstrap.css">
-    <script type="text/javascript" src="bootstrap/bootstrap.bundle.js"></script>
+    <link rel="stylesheet" href="../Bootstrap/bootstrap.css">
+    <link rel="stylesheet" href="../atividade2 Boostratp/bootstrap.css">
+    <script type="text/javascript" src="../Bootstrap/bootstrap.bundle.js"></script>
+    <script type="text/javascript" src="../atividade2 Boostratp/script.js"></script>
     <title>Games Mania</title>
 </head>
 
@@ -19,12 +20,12 @@
 
     <header class="cabecalho">
         <div class="container-fluid fixed-top">
-            <div class="row bg-dark">
+            <div class="row bg-dark d-flex h-100 align-items-center">
                 <div class="col-3">
                     <nav class="navbar">
                         <div class="container">
                             <a class="navbar-brand" href="#">
-                                <img src="Img/Logo.png" alt="logo-marca" width="45" height="45"
+                                <img src="../Img/Logo.png" alt="logo-marca" width="45" height="45"
                                     class="d-inline-block align-text-top"> Games Mania
                             </a>
                         </div>
@@ -46,20 +47,20 @@
                         <div class="p-2 flex-grow-1">
                             <ul class="nav justify-content-end">
                                 <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="bootstrap.html">Tela
+                                    <a class="nav-link active" aria-current="page" href="../Arquivos.html/bootstrap.html">Tela
                                         Principal</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="produtos.html">Nossos Produtos</a>
+                                    <a class="nav-link" href="../Arquivos.html/produtos.html">Nossos Produtos</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="telaContato.html">Nos contate</a>
+                                    <a class="nav-link" href="../Arquivos.html/telaContato.html">Nos contate</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="empresa.html">Nos conheça</a>
+                                    <a class="nav-link" href="../Arquivos.html/empresa.html">Nos conheça</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="telaDeLogin.html">Login/Cadastre-se</a>
+                                    <a class="nav-link" href="../AtividadeOnline3/tela_login.html">Login/Cadastre-se</a>
                                 </li>
                             </ul>
                         </div>
@@ -76,7 +77,7 @@
                 <div class="row">
                     <div class="col">
                         <h1 class="titulo text-center">Bem vindo a nossa loja, Games Mania</h1>
-                        <img src="img/fundo-gamers-vermelho.webp" alt="Banner" width="100%">
+                        <img src="../img/fundo-gamers-vermelho.webp" alt="Banner" width="100%">
                     </div>
                 </div>
                 <hr>
@@ -99,7 +100,7 @@
                 <div class="row row-cols-1 row-cols-md-2 g-4">
                     <div class="col">
                         <div class="card">
-                            <img src="Img/x-box-1791671 (1).jpg" class="card-img-top" alt="...">
+                            <img src="../Img/x-box-1791671 (1).jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title titulo">Xbox Series <S></S></h5>
                                 <p class="card-text titulo">Xbox Series X Promoção 2,500R$</p>
@@ -108,7 +109,7 @@
                     </div>
                     <div class="col">
                         <div class="card">
-                            <img src="Img/nintendo-switch-2154437_1920.jpg" class="card-img-top" alt="...">
+                            <img src="../Img/nintendo-switch-2154437_1920.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title titulo">Nitendo Switch</h5>
                                 <p class="card-text titulo">Nintendo Switch Promoção 2,000R$</p>
@@ -117,19 +118,22 @@
                     </div>
                     <div class="col">
                         <div class="card">
-                            <img src="Img/joystick-gbd008b157_1280.jpg" class="card-img-top" alt="...">
+                            <img src="../Img/joystick-gbd008b157_1280.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title titulo">Controle Ps4</h5>
-                                <p class="card-text titulo">Controle PS4, original lacrado na caixa, promoção 200R$</p>
+                                <p class="card-text titulo">Controle PS4, original lacrado na caixa, promoção
+                                    200R$</p>
                             </div>
                         </div>
                     </div>
                     <div class="col">
                         <div class="card">
-                            <img src="Img/x-box-1791671 (1).jpg" class="card-img-top" alt="...">
+                            <img src="../Img/x-box-1791671 (1).jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title titulo">Xbox series S</h5>
-                                <p class="card-text titulo">Console semi-novo na caixa com garantia, promoção 1,700R$.</p>
+                                <p class="card-text titulo">Console semi-novo na caixa com garantia, promoção
+                                    1,700R$.
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -154,7 +158,7 @@
                 <div class="row row-cols-1 row-cols-md-2 g-4">
                     <div class="col">
                         <div class="card">
-                            <img src="Img/joystick-gbd008b157_1280.jpg" class="card-img-top" alt="...">
+                            <img src="../Img/joystick-gbd008b157_1280.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Xbox Series <S></S></h5>
                                 <p class="card-text">Xbox Series X Promoção 2,500R$</p>
@@ -163,7 +167,7 @@
                     </div>
                     <div class="col">
                         <div class="card">
-                            <img src="Img/joystick-gbd008b157_1280.jpg" class="card-img-top" alt="...">
+                            <img src="../Img/joystick-gbd008b157_1280.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Nitendo Switch</h5>
                                 <p class="card-text">Nintendo Switch Promoção 2,000R$</p>
@@ -172,7 +176,7 @@
                     </div>
                     <div class="col">
                         <div class="card">
-                            <img src="Img/joystick-gbd008b157_1280.jpg" class="card-img-top" alt="...">
+                            <img src="../Img/joystick-gbd008b157_1280.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Controle Ps4</h5>
                                 <p class="card-text">Controle PS4, original lacrado na caixa, promoção 200R$</p>
@@ -181,10 +185,12 @@
                     </div>
                     <div class="col">
                         <div class="card">
-                            <img src="Img/joystick-gbd008b157_1280.jpg" class="card-img-top" alt="..." height="422px" width="100">
+                            <img src="../Img/joystick-gbd008b157_1280.jpg" class="card-img-top" alt="..." height="422px"
+                                width="100">
                             <div class="card-body">
                                 <h5 class="card-title">Xbox series S</h5>
-                                <p class="card-text">Console semi-novo na caixa com garantia, promoção 1,700R$.</p>
+                                <p class="card-text">Console semi-novo na caixa com garantia, promoção 1,700R$.
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -194,13 +200,25 @@
         </section>
 
         <section>
-            
+
         </section>
 
     </main>
 
     <footer>
-
+        <div class="container">
+            <div class="row py-5 bg-ligth">
+                <div class="col-12 col-md-4 text-center text-md-left">
+                    &copy; 2022- Games Mania
+                </div>
+                <div class="col-12 col-md-4 text-center">
+                    <a href="" class="text-decoration-none text-ligth">Política de privacidade</a>
+                </div>
+                <div class="col-12 col-md-4 text-center text-md-left">
+                    <a href="" class="text-decoration-none text-ligth">Administrar</a>
+                </div>
+            </div>
+        </div>
     </footer>
 
 </body>
