--- a/AtividadeOnline3/telaDeLogin.html
+++ b/AtividadeOnline3/telaDeLogin.html
@@ -9,9 +9,9 @@
     <meta name="keywords" content="Games, Jogos, Video Games, Tablet, Computadores, Celulares" />
     <meta name="description"
         content="Bem vindo a Games Mania, aqui você encontrará tudo sobre o universo gamer, Jogos e muito mais!" />
-    <link rel="stylesheet" href="telaDeLogin.css">
+    <link rel="stylesheet" href="../AtividadeOnline3/telaDeLogin.css">
     <link rel="stylesheet" href="bootstrap/bootstrap.css">
-    <script src="javascript.js/tela_login.js"></script>
+    <script src="../AtividadeOnline3/tela_login.js"></script>
     <title>Tela de Login</title>
 
     <body>
