--- a/atividadePresencial3/index.html
+++ b/atividadePresencial3/index.html
@@ -32,7 +32,7 @@
                 <div class="col-1">
                     <div class="d-flex h-100 align-items-center corFundo">
                         <div class="p-2 flex-grow-1 cor">
-                            <button id="btnClique">Claro/Escuro</button>
+                            <button onclick="mudarTema()">Escuro/Azul>Claro/Escuro</button>
                         </div>
                     </div>        
                 </div>
