--- a/atividadePresencial4/index.html
+++ b/atividadePresencial4/index.html
@@ -10,7 +10,8 @@
     <meta name="description"
         content="Bem vindo a Games Mania, aqui você encontrará tudo sobre o universo gamer, Jogos e muito mais!" />
     <link rel="stylesheet" href="../Bootstrap/bootstrap.css">
-    <link rel="stylesheet" href="../atividadePresencial3/style.css">
+    <link rel="stylesheet" href="../atividadePresencial4/style.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <title>Games Mania</title>
 </head>
 
@@ -32,7 +33,7 @@
                 <div class="col-1">
                     <div class="d-flex h-100 align-items-center corFundo">
                         <div class="p-2 flex-grow-1 cor">
-                            <button class="button" onclick="mudarFonte()">Aumente
+                            <button id="button" onclick="mudarFonte()">Aumente
                             a fonte ou diminua</button>
                         </div>
                     </div>        
@@ -53,7 +54,7 @@
                         <div class="p-2 flex-grow-1">
                             <ul class="nav justify-content-end">
                                 <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="../Arquivos.html/bootstrap.html">Tela
+                                    <a class="nav-link active" aria-current="page" href="../atividadePresencial4/index.html">Tela
                                         Principal</a>
                                 </li>
                                 <li class="nav-item">
@@ -228,7 +229,7 @@
     </footer>
      
     <script type="text/javascript" src="../Bootstrap/bootstrap.bundle.js"></script>
-    <script type="text/javascript" src="../atividadePresencial3/scripit.js"></script>
+    <script type="text/javascript" src="../atividadePresencial4/scripit.js"></script>
 
 </body>
 
